--- a/pages/tutorial.html
+++ b/pages/tutorial.html
@@ -83,7 +83,7 @@
 
 
     <h2>TUTORIAL</h2>
-    <section id="tutorial">
+
       <!--
    <article  class="tutorial__media1  justify-content">
       <video  
@@ -94,15 +94,13 @@
       ></video>
     </article>-->
     <div class="container">
-    <article  class="tutorial__media2">
-      <img class="imgtuto"
+
+      <img class="imgtuto container"
         src="../img/Turorial2_page-0001 (1).jpg"
        alt="tutorial"
-      
       ></img>
-    </article>
   </div>
-  </section>
+
 
 
     
